--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&display=swap" rel="stylesheet">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     </head>
-    <body>
+    <script>
+        function roll() {
+            document.location.href = 'https://www.youtube.com/watch?v=dQw4w9WgXcQ';
+        };
+    </script>
+    <body onClick='roll()'>
         <div class='header'>
             <div class='banner'>
                 <div class='banner__dropdown large-screen'>
