--- a/index.html
+++ b/index.html
@@ -346,49 +346,66 @@
                     <div class='site-map__grid'>
                         <div>
                             <b>Account</b>
-                            <br/>
-                            <small>Manage Account</small>
-                            <br/>
-                            <small>Saved Items</small>
-                            <br/>
-                            <small>Orders</small>
-                            <br/>
-                            <small>Redeemed Gift Card</small>
+                            <div>
+                                <small>Manage Account</small>
+                            </div>
+                            <div>
+                                <small>Saved Items</small>
+                            </div>
+                            <div>
+                                <small>Orders</small>
+                            </div>
+                            <div>
+                                <small>Redeemed Gift Card</small>
+                            </div>
                         </div>
                         <div>
                             <b>Service</b>
-                            <br/>
-                            <small>Shipping & Returns</small>
-                            <br/>
-                            <small>Warranty</small>
-                            <br/>
-                            <small>FAQ</small>
-                            <br/>
-                            <small>Find a Store</small>
-                            <br/>
-                            <small>Get in touch</small>
+                            <div>
+                                <small>Shipping & Returns</small>
+                            </div>
+                            <div>
+                                <small>Warranty</small>
+                            </div>
+                            <div>
+                                <small>FAQ</small>
+                            </div>
+                            <div>
+                                <small>Find a Store</small>
+                            </div>
+                            <div>
+                                <small>Get in touch</small>
+                            </div>
                         </div>
                         <div>
                             <b>Company</b>
-                            <br/>
-                            <small>Who we are</small>
-                            <br/>
-                            <small>Press</small>
-                            <br/>
-                            <small>Careers</small>
-                            <br/>
-                            <small>Terms and Conditions</small>
-                            <br/>
-                            <small>Privacy</small>
+                            <div>
+                                <small>Who we are</small>
+                            </div>
+                            <div>
+                                <small>Press</small>
+                            </div>
+                            <div>
+                                <small>Careers</small>
+                            </div>
+                            <div>
+                                <small>Terms and Conditions</small>
+                            </div>
+                            <div>
+                                <small>Privacy</small>
+                            </div>
                         </div>
                         <div>
                             <b>Connect</b>
-                            <br/>
-                            <small>Instagram</small>
-                            <br/>
-                            <small>Pinterest</small>
-                            <br/>
-                            <small>Twitter</small>
+                            <div>
+                                <small>Instagram</small>
+                            </div>
+                            <div>
+                                <small>Pinterest</small>
+                            </div>
+                            <div>
+                                <small>Twitter</small>
+                            </div>
                         </div>
                     </div>
                 </div>
