Init books page

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
                     <a href="https://bsky.app/profile/comp-phys-marc.bsky.social">Bluesky</a>
                 </div>
                 <div class='banner__text'>
-                    <p>
-                        Marcus' Science and Sci-Fi Author Website
-                    </p>
+                    <a href="index.html">
+                        <p>
+                            Marcus' Science and Sci-Fi Author Website
+                        </p>
+                    </a>
                 </div>
                 <div class='banner__right large-screen'>
                     <div>
@@ -35,10 +37,10 @@
                     <div class='utility-bar__left'>
                         <svg class='utility-bar__left__icon' xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="darkgrey" class="h-6 w-6" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
                         <svg class='utility-bar__left__icon' xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="darkgrey" class="w-6 h-6" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
-                        <p>Books</p>
-                        <p>Papers</p>
-                        <p>Patents</p>
-                        <p>Articles</p>
+                        <a href="books.html">Books</a>
+                        <a href="#">Papers</a>
+                        <a href="#">Patents</a>
+                        <a href="#">Articles</a>
                     </div>
                     <div class='utility-bar__right'>
                         <svg class='utility-bar__right__icon utility-bar__right__icon--large-only' xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="darkgrey" class="w-6 h-6" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
@@ -64,7 +66,7 @@
                         <div class='info-grid__left__form'>
                             <p class='info-grid__price'>$14.07</p>
                             <br/>
-                            <button class='info-grid__buy'>Purchase</button>
+                            <button class='info-grid__buy'>Coming soon!</button>
                         </div>
                         <p>
                             In the year 3123, three friends set out to change the fabric of the space colonies through a new innovation in communications technology. 
@@ -148,7 +150,7 @@
                     <div class='info-grid__right'>
                         <h1 class='info-grid__right__title'>Paperback</h1>
                         <p class='info-grid__price'>$14.07</p>
-                        <button class='info-grid__buy'>Purchase</button>
+                        <button class='info-grid__buy'>Coming soon!</button>
                     </div>
                 </div>
                 <div class='purchased'>
@@ -195,73 +197,29 @@
                 <div class='site-map'>
                     <div class='site-map__grid'>
                         <div>
-                            <b>Account</b>
+                            <a href="books.html">
+                                <b>Books</b>
+                            </a>
                             <div>
-                                <small>Manage Account</small>
+                                <a href="books.html#mercury"><small>The Mercury Relay</small></a>
                             </div>
                             <div>
-                                <small>Saved Items</small>
-                            </div>
-                            <div>
-                                <small>Orders</small>
-                            </div>
-                            <div>
-                                <small>Redeemed Gift Card</small>
+                                <a href="books.html#thesis"><small>Towards Practical Hybrid Quantum / Classical Computing</small></a>
                             </div>
                         </div>
                         <div>
-                            <b>Service</b>
-                            <div>
-                                <small>Shipping & Returns</small>
-                            </div>
-                            <div>
-                                <small>Warranty</small>
-                            </div>
-                            <div>
-                                <small>FAQ</small>
-                            </div>
-                            <div>
-                                <small>Find a Store</small>
-                            </div>
-                            <div>
-                                <small>Get in touch</small>
-                            </div>
+                            <b>Papers</b>
                         </div>
                         <div>
-                            <b>Company</b>
-                            <div>
-                                <small>Who we are</small>
-                            </div>
-                            <div>
-                                <small>Press</small>
-                            </div>
-                            <div>
-                                <small>Careers</small>
-                            </div>
-                            <div>
-                                <small>Terms and Conditions</small>
-                            </div>
-                            <div>
-                                <small>Privacy</small>
-                            </div>
+                            <b>Patents</b>
                         </div>
                         <div>
-                            <b>Connect</b>
-                            <div>
-                                <small>Instagram</small>
-                            </div>
-                            <div>
-                                <small>Pinterest</small>
-                            </div>
-                            <div>
-                                <small>Twitter</small>
-                            </div>
+                            <b>Articles</b>
                         </div>
                     </div>
                 </div>
                 <div class='footer'>
-                   <small class='footer-text'>Shipping to Canada ($CAD)</small><small class='footer-text footer-text--spaced'>English</small>
-                   <small class='footer-text footer-text--right'>© 2021 Clothing Company, Ltd.</small>
+                   <small class='footer-text footer-text--right'>© 2025 Marcus Edwards</small>
                 </div>
             </div>
         </div>
