Additional writings section

--- a/books.html
+++ b/books.html
@@ -82,7 +82,7 @@
                         <div class="book__left__spotlight">
                             <div class="circle"></div>
                         </div>
-                        <img class='image--feature' src='images/thesis.png'/>
+                        <img class='image--feature' src='images/uw.png'/>
                     </div>
                     <div class="book__right">
                         <p>
