--- a/books.html
+++ b/books.html
@@ -38,7 +38,7 @@
                         <svg class='utility-bar__left__icon' xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="darkgrey" class="h-6 w-6" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
                         <svg class='utility-bar__left__icon' xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="darkgrey" class="w-6 h-6" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
                         <a href="books.html">Books</a>
-                        <a href="#">Papers</a>
+                        <a href="papers.html">Papers</a>
                         <a href="#">Patents</a>
                         <a href="#">Articles</a>
                     </div>
@@ -56,6 +56,9 @@
                         <img class='image--feature' src='images/mercury_front.png'/>
                     </div>
                     <div class="book__right">
+                        <b>
+                            The Mercury Relay
+                        </b>
                         <p>
                             In the year 3123, three friends set out to change the fabric of the space colonies through a new innovation in communications technology. 
                             They soon find others have different ideas for their invention and for the colonies at large. Will the young astronauts be able to navigate 
@@ -85,6 +88,9 @@
                         <img class='image--feature' src='images/uw.png'/>
                     </div>
                     <div class="book__right">
+                        <b>
+                            Towards Practical Hybrid Quantum/Classical Computing
+                        </b>
                         <p>
                             Quantum computing is in a critical phase where theoretical schemes and protocols are now being implemented in the real 
                             world for the first time. In the case of quantum communication protocols, we present the first experimental implementations of two entanglement-based 
