--- a/index.html
+++ b/index.html
@@ -253,10 +253,41 @@
                             </div>
                         </div>
                         <div>
-                            <b>Papers</b>
+                            <a href="papers.html">
+                                <b>Papers</b>
+                            </a>
+                            <div>
+                                <a href="papers.html#blockchain"><small>A review of quantum and hybrid quantum/classical blockchain protocols</small></a>
+                            </div>
+                            <div>
+                                <a href="papers.html#compiler"><small>Towards Readout-Aware Layout Synthesis for Spin Qubit Systems with Double Quantum Dot Readouts</small></a>
+                            </div>
+                            <div>
+                                <a href="papers.html#byzantine"><small>Quantum Honest Byzantine Agreement as a Distributed Quantum Algorithm</small></a>
+                            </div>
+                            <div>
+                                <a href="papers.html#emulator"><small>Designing a Hybrid Digital/Analog Quantum Physics Emulator as Open Hardware</small></a>
+                            </div>
+                            <div>
+                                <a href="papers.html#parsers"><small>Three Quantum Programming Language Parser Implementations for the Web</small></a>
+                            </div>
+                            <div>
+                                <a href="papers.html#qasm-three"><small>Enabling the Verification and Formalization of Hybrid Quantum-Classical Computing with OpenQASM 3.0 compatible QASM-TS 2.0</small></a>
+                            </div>
                         </div>
                         <div>
-                            <b>Patents</b>
+                            <a href="patents.html">
+                                <b>Patents</b>
+                            </a>
+                            <div>
+                                <a href="patents.html#assistant"><small>Artificial Intelligence-Based Personalized Financial Recommendation Assistant System and Method</small></a>
+                            </div>
+                            <div>
+                                <a href="patents.html#savings"><small>Computer System and Computer-Implemented Method for Creating a Savings Plan for Specific Purchases</small></a>
+                            </div>
+                            <div>
+                                <a href="patents.html#smart-card"><small>Systems methods and devices for increasing security when using smartcards </small></a>
+                            </div>
                         </div>
                         <div>
                             <b>Articles</b>
