--- a/papers.html
+++ b/papers.html
@@ -252,6 +252,64 @@
                         <a href="https://arxiv.org/abs/2412.12578"><button class='info-grid__buy'>Download</button></a>
                     </div>
                 </div>
+                <div class='site-map'>
+                    <div class='site-map__grid'>
+                        <div>
+                            <a href="books.html">
+                                <b>Books</b>
+                            </a>
+                            <div>
+                                <a href="books.html#mercury"><small>The Mercury Relay</small></a>
+                            </div>
+                            <div>
+                                <a href="books.html#thesis"><small>Towards Practical Hybrid Quantum / Classical Computing</small></a>
+                            </div>
+                        </div>
+                        <div>
+                            <a href="papers.html">
+                                <b>Papers</b>
+                            </a>
+                            <div>
+                                <a href="papers.html#blockchain"><small>A review of quantum and hybrid quantum/classical blockchain protocols</small></a>
+                            </div>
+                            <div>
+                                <a href="papers.html#compiler"><small>Towards Readout-Aware Layout Synthesis for Spin Qubit Systems with Double Quantum Dot Readouts</small></a>
+                            </div>
+                            <div>
+                                <a href="papers.html#byzantine"><small>Quantum Honest Byzantine Agreement as a Distributed Quantum Algorithm</small></a>
+                            </div>
+                            <div>
+                                <a href="papers.html#emulator"><small>Designing a Hybrid Digital/Analog Quantum Physics Emulator as Open Hardware</small></a>
+                            </div>
+                            <div>
+                                <a href="papers.html#parsers"><small>Three Quantum Programming Language Parser Implementations for the Web</small></a>
+                            </div>
+                            <div>
+                                <a href="papers.html#qasm-three"><small>Enabling the Verification and Formalization of Hybrid Quantum-Classical Computing with OpenQASM 3.0 compatible QASM-TS 2.0</small></a>
+                            </div>
+                        </div>
+                        <div>
+                            <a href="patents.html">
+                                <b>Patents</b>
+                            </a>
+                            <div>
+                                <a href="patents.html#assistant"><small>Artificial Intelligence-Based Personalized Financial Recommendation Assistant System and Method</small></a>
+                            </div>
+                            <div>
+                                <a href="patents.html#savings"><small>Computer System and Computer-Implemented Method for Creating a Savings Plan for Specific Purchases</small></a>
+                            </div>
+                            <div>
+                                <a href="patents.html#smart-card"><small>Systems methods and devices for increasing security when using smartcards </small></a>
+                            </div>
+                        </div>
+                        <div>
+                            <b>Articles</b>
+                        </div>
+                    </div>
+                </div>
+                <div class='footer'>
+                   <small class='footer-text footer-text--right'>© 2025 Marcus Edwards</small>
+                </div>
             </div>
         </div>
     </body>
