Add header graphics

--- a/patents.html
+++ b/patents.html
@@ -8,6 +8,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <div class="container">
+            <img class="no-offset" src="images/ics.jpg"/>
+        </div>
         <div class='header'>
             <div class='banner'>
                 <div class='banner__left large-screen'>
@@ -40,7 +43,7 @@
                         <a href="books.html">Books</a>
                         <a href="papers.html">Papers</a>
                         <a href="patents.html">Patents</a>
-                        <a href="#">Articles</a>
+                        <a href="articles.html">Articles</a>
                     </div>
                     <div class='utility-bar__right'>
                         <svg class='utility-bar__right__icon utility-bar__right__icon--large-only' xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="darkgrey" class="w-6 h-6" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
