--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
         }
     </script>
     <body>
+        <div class="container">
+            <video width="2000" autoplay="autoplay" loop="true" muted>
+                <source src="images/frost.mp4" type="video/mp4">
+            </video> 
+        </div>
         <div class='header'>
             <div class='banner'>
                 <div class='banner__left large-screen'>
@@ -53,7 +58,7 @@
                         <a href="books.html">Books</a>
                         <a href="papers.html">Papers</a>
                         <a href="patents.html">Patents</a>
-                        <a href="#">Articles</a>
+                        <a href="articles.html">Articles</a>
                     </div>
                     <div class='utility-bar__right'>
                         <svg class='utility-bar__right__icon utility-bar__right__icon--large-only' xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="darkgrey" class="w-6 h-6" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
