--- a/books.html
+++ b/books.html
@@ -165,9 +165,33 @@
                                 <a href="patents.html#smart-card"><small>Systems methods and devices for increasing security when using smartcards </small></a>
                             </div>
                         </div>
-                        <div>
-                            <b>Articles</b>
-                        </div>
+                            <a href="articles.html">
+                                <b>Articles</b>
+                            </a>
+                            <div>
+                                <a href="articles.html#qubytes"><small>A Review and Discussion of Variational Quantum Anomaly Detection </small></a>
+                            </div>
+                            <div>
+                                <a href="articles.html#templating"><small>A High-Level Quantum Templating Language </small></a>
+                            </div>
+                            <div>
+                                <a href="articles.html#laravel"><small>Setting Up a Laravel Project to Use Quantum Computing From Scratch </small></a>
+                            </div>
+                            <div>
+                                <a href="articles.html#scratch"><small>A Quantum Engineering Focused Linux Distro From Scratch</small></a>
+                            </div>
+                            <div>
+                                <a href="articles.html#learning"><small>Machine Learning, Quantum Machine Learning and Consciousness — Scientifically and Philosophically</small></a>
+                            </div>
+                            <div>
+                                <a href="articles.html#cloud"><small>Building A Cloud-Microservices-Based Execution Environment for Hybrid Quantum-Classical Algorithms</small></a>
+                            </div>
+                            <div>
+                                <a href="articles.html#cyber"><small>Cybersecurity in Star Trek: Voyager</small></a>
+                            </div>
+                            <div>
+                                <a href="articles.html#blockchain"><small>Quantum Blockchain: Opening the Door to New Risks and Opportunities</small></a>
+                            </div>
                     </div>
                 </div>
                 <div class='footer'>
