--- a/papers.html
+++ b/papers.html
@@ -143,7 +143,7 @@
                         </small>
 
                         <h2 class='book__info-grid__title'>PDF</h2>
-                        <p class='book__info-grid__price'>$0.00</p>
+                        <p class='book__info-grid__price'>Free</p>
                         <a href="https://arxiv.org/abs/2301.02944"><button class='info-grid__buy'>Download</button></a>
                     </div>
                 </div>
@@ -182,7 +182,7 @@
                         </small>
 
                         <h2 class='book__info-grid__title'>PDF</h2>
-                        <p class='book__info-grid__price'>$0.00</p>
+                        <p class='book__info-grid__price'>Free</p>
                         <a href="https://arxiv.org/abs/2302.00821"><button class='info-grid__buy'>Download</button></a>
                     </div>
                 </div>
@@ -219,7 +219,7 @@
                         </small>
 
                         <h2 class='book__info-grid__title'>PDF</h2>
-                        <p class='book__info-grid__price'>$0.00</p>
+                        <p class='book__info-grid__price'>Free</p>
                         <a href="https://arxiv.org/abs/2310.10802"><button class='info-grid__buy'>Download</button></a>
                     </div>
                 </div>
@@ -251,7 +251,7 @@
                         </small>
 
                         <h2 class='book__info-grid__title'>PDF</h2>
-                        <p class='book__info-grid__price'>$0.00</p>
+                        <p class='book__info-grid__price'>Free</p>
                         <a href="https://arxiv.org/abs/2412.12578"><button class='info-grid__buy'>Download</button></a>
                     </div>
                 </div>
@@ -305,9 +305,33 @@
                                 <a href="patents.html#smart-card"><small>Systems methods and devices for increasing security when using smartcards </small></a>
                             </div>
                         </div>
-                        <div>
-                            <b>Articles</b>
-                        </div>
+                            <a href="articles.html">
+                                <b>Articles</b>
+                            </a>
+                            <div>
+                                <a href="articles.html#qubytes"><small>A Review and Discussion of Variational Quantum Anomaly Detection </small></a>
+                            </div>
+                            <div>
+                                <a href="articles.html#templating"><small>A High-Level Quantum Templating Language </small></a>
+                            </div>
+                            <div>
+                                <a href="articles.html#laravel"><small>Setting Up a Laravel Project to Use Quantum Computing From Scratch </small></a>
+                            </div>
+                            <div>
+                                <a href="articles.html#scratch"><small>A Quantum Engineering Focused Linux Distro From Scratch</small></a>
+                            </div>
+                            <div>
+                                <a href="articles.html#learning"><small>Machine Learning, Quantum Machine Learning and Consciousness — Scientifically and Philosophically</small></a>
+                            </div>
+                            <div>
+                                <a href="articles.html#cloud"><small>Building A Cloud-Microservices-Based Execution Environment for Hybrid Quantum-Classical Algorithms</small></a>
+                            </div>
+                            <div>
+                                <a href="articles.html#cyber"><small>Cybersecurity in Star Trek: Voyager</small></a>
+                            </div>
+                            <div>
+                                <a href="articles.html#blockchain"><small>Quantum Blockchain: Opening the Door to New Risks and Opportunities</small></a>
+                            </div>
                     </div>
                 </div>
                 <div class='footer'>
