--- a/books.html
+++ b/books.html
@@ -165,6 +165,7 @@
                                 <a href="patents.html#smart-card"><small>Systems methods and devices for increasing security when using smartcards </small></a>
                             </div>
                         </div>
+                        <div>
                             <a href="articles.html">
                                 <b>Articles</b>
                             </a>
@@ -192,6 +193,7 @@
                             <div>
                                 <a href="articles.html#blockchain"><small>Quantum Blockchain: Opening the Door to New Risks and Opportunities</small></a>
                             </div>
+                        </div>
                     </div>
                 </div>
                 <div class='footer'>
