Replace shaky video

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
     </script>
     <body>
         <div class="container">
-            <video width="2000" autoplay="autoplay" loop="true" muted>
-                <source src="images/frost.mp4" type="video/mp4">
-            </video> 
+            <img class="no-offset" src="images/books.jpg"/>
         </div>
         <div class='header'>
             <div class='banner'>
