Alex agreed to be listed

--- a/index.html
+++ b/index.html
@@ -132,8 +132,9 @@
                             <div>
                                 <img src='images/anon.png'/>
                                 <br/>
-                                <small>Anonymous</small>
+                                <small>Alex S</small>
                                 <br/>
+                                <small>Technical writer in quantum computing</small>
                             </div>
                             <div>
                                 <small>Chapter Criticism</small>
