--- a/papers.html
+++ b/papers.html
@@ -116,6 +116,39 @@
                         <a href="https://ieeexplore.ieee.org/abstract/document/10821119"><button class='info-grid__buy'>Purchase</button></a>
                     </div>
                 </div>
+                <div class='book' id="productive">
+                    <div class="book__left">
+                        <div class="book__left__spotlight">
+                            <div class="circle"></div>
+                        </div>
+                        <img class='image--feature' src='images/arxiv.png'/>
+                    </div>
+                    <div class="book__right">
+                        <b>
+                            Productive Quantum Programming Needs Better Abstract Machines
+                        </b>
+                        <p>
+                            An effective, accessible abstraction hierarchy has made using and programming computers possible for 
+                            people across all disciplines. Establishing such a hierarchy for quantum programming is an outstanding 
+                            challenge, especially due to a proliferation of different conventions and the rapid pace of innovation. 
+                            One critical portion of the hierarchy is the abstract machine, the layer that separates a programmer's 
+                            mental model of the hardware from its physical realization. Drawing on historical parallels in classical
+                            computing, we explain why having the "right" quantum abstract machine (QAM) is essential for making 
+                            progress in the field and propose a novel framework for evaluating QAMs based on a set of desirable 
+                            criteria. These criteria capture aspects of a QAM such as universality, compactness, expressiveness, 
+                            and composability, which aid in the representation of quantum programs. By defining this framework we 
+                            take steps toward defining an optimal QAM. We further apply our framework to survey the landscape of 
+                            existing proposals, draw comparisons, and assess them based on our criteria. While these proposals share 
+                            many common strengths, we find that each falls short of our ideal. Our framework and our findings set a 
+                            direction for subsequent efforts to define a future QAM that is both straightforward to map to a variety 
+                            of quantum computers, and provides a stable abstraction for quantum software development. 
+                        </p>
+
+                        <h2 class='book__info-grid__title'>PDF</h2>
+                        <p class='book__info-grid__price'>Free</p>
+                        <a href="https://arxiv.org/abs/2505.00718"><button class='info-grid__buy'>Download</button></a>
+                    </div>
+                </div>
                 <div class='book' id="byzantine">
                     <div class="book__left">
                         <div class="book__left__spotlight">
@@ -277,6 +310,9 @@
                             </div>
                             <div>
                                 <a href="papers.html#compiler"><small>Towards Readout-Aware Layout Synthesis for Spin Qubit Systems with Double Quantum Dot Readouts</small></a>
+                            </div>
+                            <div>
+                                <a href="papers.html#productive"><small>Productive Quantum Programming Needs Better Abstract Machines</small></a>
                             </div>
                             <div>
                                 <a href="papers.html#byzantine"><small>Quantum Honest Byzantine Agreement as a Distributed Quantum Algorithm</small></a>
