--- a/patents.html
+++ b/patents.html
@@ -183,6 +183,9 @@
                                 <a href="papers.html#compiler"><small>Towards Readout-Aware Layout Synthesis for Spin Qubit Systems with Double Quantum Dot Readouts</small></a>
                             </div>
                             <div>
+                                <a href="papers.html#productive"><small>Productive Quantum Programming Needs Better Abstract Machines</small></a>
+                            </div>
+                            <div>
                                 <a href="papers.html#byzantine"><small>Quantum Honest Byzantine Agreement as a Distributed Quantum Algorithm</small></a>
                             </div>
                             <div>
