--- a/patents.html
+++ b/patents.html
@@ -84,7 +84,7 @@
 
                         <h2 class='book__info-grid__title'>PDF</h2>
                         <p class='book__info-grid__price'>Free</p>
-                        <a href="hhttps://patents.google.com/patent/US20210303973A1/en"><button class='info-grid__buy'>Download</button></a>
+                        <a href="https://patents.google.com/patent/US20210303973A1/en"><button class='info-grid__buy'>Download</button></a>
                     </div>
                 </div>
                 <div class='book' id="savings">
