--- a/index.html
+++ b/index.html
@@ -51,16 +51,15 @@
             <div class='subheader'>
                 <div class='utility-bar'>
                     <div class='utility-bar__left'>
-                        <svg class='utility-bar__left__icon' xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="darkgrey" class="h-6 w-6" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
-                        <svg class='utility-bar__left__icon' xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="darkgrey" class="w-6 h-6" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
+                        <!-- <svg class='utility-bar__left__icon' xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="darkgrey" class="h-6 w-6" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg> -->
+                        <!-- <svg class='utility-bar__left__icon' xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="darkgrey" class="w-6 h-6" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg> -->
                         <a href="books.html">Books</a>
                         <a href="papers.html">Papers</a>
                         <a href="patents.html">Patents</a>
                         <a href="articles.html">Articles</a>
-                    </div>
-                    <div class='utility-bar__right'>
-                        <svg class='utility-bar__right__icon utility-bar__right__icon--large-only' xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="darkgrey" class="w-6 h-6" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
-                    </div>
+                    <!-- </div> -->
+                        <!-- <svg class='utility-bar__right__icon utility-bar__right__icon--large-only' xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="darkgrey" class="w-6 h-6" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg> -->
+                    <!-- </div> -->
                 </div>
             </div>
             <div class='main-matter'>
