M. Verant comment with permission

--- a/index.html
+++ b/index.html
@@ -108,32 +108,28 @@
                         </p>
                         <div class='review'>
                             <div>
-                                <img src='images/anon.png'/>
+                                <img src='images/dragon.jpg'/>
                                 <br/>
-                                <small>Anonymous</small>
+                                <small>M. Verant</small>
                                 <br/>
+                                <small>Fantasy Author</small>
                             </div>
                             <div>
-                                <small>Novel Criticism</small>
+                                <small>Chapter Criticism</small>
                                 <p class='info-grid__details info-grid__details--nounderline'>
                                     <small>
-                                        There are several points in the novel where the description and imagery become incredible. I also love the spirituality underlying the science of the setting – as though humanity has abandoned a Judeo-Christian God to find more in the magic of the universe. There’s something downright poetic about that, 
-                                        and adds a very human and humanities-focused touch to this hard-science setting.
-                                    </small>
-                                    <br/>
-                                    <small>
-                                        More generally, the characters in this narrative are, in general, very well realized, with understandable motivations – both as cultures, and as individuals, at least in my opinion. I particularly liked Japh, Zed, El, and the few times we got into the head of a robot.
+                                        The conflict over how FTL communication affects colony relations for trade/war feels like a cool basis for a story. It gives an empire-style SF with political intrigue.
                                     </small>
                                 </p>
                             </div>
                         </div>
                         <div class='review'>
                             <div>
-                                <img src='images/anon.png'/>
+                                <img src='images/nonanon.png'/>
                                 <br/>
                                 <small>Alex S</small>
                                 <br/>
-                                <small>Technical writer in quantum computing</small>
+                                <small>Technical quantum computing writer</small>
                             </div>
                             <div>
                                 <small>Chapter Criticism</small>
@@ -154,10 +150,15 @@
                                 <br/>
                             </div>
                             <div>
-                                <small>Chapter Criticism</small>
+                                <small>Novel Criticism</small>
                                 <p class='info-grid__details info-grid__details--nounderline'>
                                     <small>
-                                        The conflict over how FTL communication affects colony relations for trade/war feels like a cool basis for a story. It gives an empire-style SF with political intrigue.
+                                        There are several points in the novel where the description and imagery become incredible. I also love the spirituality underlying the science of the setting – as though humanity has abandoned a Judeo-Christian God to find more in the magic of the universe. There’s something downright poetic about that, 
+                                        and adds a very human and humanities-focused touch to this hard-science setting.
+                                    </small>
+                                    <br/>
+                                    <small>
+                                        More generally, the characters in this narrative are, in general, very well realized, with understandable motivations – both as cultures, and as individuals, at least in my opinion. I particularly liked Japh, Zed, El, and the few times we got into the head of a robot.
                                     </small>
                                 </p>
                             </div>
