Purchase -> coming soon

--- a/books.html
+++ b/books.html
@@ -80,7 +80,7 @@
 
                         <h2 class='book__info-grid__title'>Paperback</h2>
                         <p class='book__info-grid__price'>$14.07</p>
-                        <button class='info-grid__buy'>Purchase</button>
+                        <button class='info-grid__buy'>Coming soon!</button>
                     </div>
                 </div>
                 <div class='book' id="thesis">
